--- a/package.json
+++ b/package.json
@@ -7,22 +7,24 @@
   "devDependencies": {
     "@biomejs/biome": "1.5.3",
     "@fontsource-variable/fira-code": "5.0.16",
-    "@types/chrome": "0.0.260",
+    "@types/chrome": "0.0.261",
     "@types/fs-extra": "11.0.4",
     "@types/node": "18.19.17",
-    "@types/react": "18.2.57",
+    "@types/react": "18.2.58",
     "@types/react-dom": "18.2.19",
     "@types/webextension-polyfill": "0.10.7",
-    "@ziloen/eslint-config": "0.1.17",
+    "@ziloen/eslint-config": "0.1.18",
+    "@ziloen/tailwind-config": "1.0.3",
     "cross-env": "7.0.3",
     "esbuild": "0.20.1",
     "esbuild-plugin-copy": "2.1.1",
     "esbuild-style-plugin": "1.6.3",
-    "eslint": "8.56.0",
+    "eslint": "8.57.0",
     "esno": "4.0.0",
     "fs-extra": "11.2.0",
-    "tailwindcss": "0.0.0-insiders.e4154e0",
+    "tailwindcss": "0.0.0-insiders.780163c",
     "ts-lib-enhance": "1.0.16",
+    "typescript": "5.3.3",
     "ulid": "2.3.0",
     "unplugin-auto-import": "0.17.5",
     "web-ext": "7.11.0",
@@ -31,13 +33,13 @@
   "dependencies": {
     "axios": "1.6.7",
     "clsx": "2.1.0",
-    "framer-motion": "11.0.5",
-    "i18next": "23.9.0",
+    "framer-motion": "11.0.6",
+    "i18next": "23.10.0",
     "lodash-es": "4.17.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "14.0.5",
-    "rxjs": "7.8.1",
+    "rxjs": "8.0.0-alpha.14",
     "serialize-error": "11.0.3",
     "typed-webext": "0.6.5"
   }
