--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "exactOptionalPropertyTypes": false,
+    "noEmit": true,
     "types": [
       "node"
     ],
