--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "@biomejs/biome": "1.5.3",
     "@fontsource-variable/fira-code": "5.0.16",
+    "@fontsource-variable/noto-sans-sc": "5.0.4",
     "@types/chrome": "0.0.262",
     "@types/fs-extra": "11.0.4",
     "@types/node": "18.19.21",
