--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development esno scripts/esbuild.ts",
-    "build": "cross-env NODE_ENV=production esno scripts/esbuild.ts"
+    "build": "cross-env NODE_ENV=production esno scripts/esbuild.ts",
+    "build:firefox": "cross-env NODE_ENV=production EXTENSION=firefox esno scripts/esbuild.ts"
   },
   "devDependencies": {
     "@biomejs/biome": "1.5.3",
@@ -11,8 +12,8 @@
     "@types/chrome": "0.0.262",
     "@types/fs-extra": "11.0.4",
     "@types/node": "18.19.21",
-    "@types/react": "18.2.63",
-    "@types/react-dom": "18.2.20",
+    "@types/react": "18.2.64",
+    "@types/react-dom": "18.2.21",
     "@types/webextension-polyfill": "0.10.7",
     "@ziloen/eslint-config": "0.1.20",
     "@ziloen/tailwind-config": "1.1.2",
@@ -23,9 +24,9 @@
     "eslint": "8.57.0",
     "esno": "4.7.0",
     "fs-extra": "11.2.0",
-    "tailwindcss": "0.0.0-insiders.4429ab8",
+    "tailwindcss": "3.4.1",
     "ts-lib-enhance": "1.0.16",
-    "typescript": "5.3.3",
+    "typescript": "5.4.2",
     "ulid": "2.3.0",
     "unplugin-auto-import": "0.17.5",
     "web-ext": "7.11.0",
@@ -39,7 +40,7 @@
     "lodash-es": "4.17.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-i18next": "14.0.5",
+    "react-i18next": "14.1.0",
     "rxjs": "8.0.0-alpha.14",
     "serialize-error": "11.0.3",
     "typed-webext": "0.6.5"
