Add pure annotations plugin

--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -2,9 +2,15 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "exactOptionalPropertyTypes": false,
+    "moduleResolution": "Bundler",
+    "module": "ESNext",
+    "target": "ESNext",
     "noEmit": true,
     "types": [
       "node"
+    ],
+    "lib": [
+      "ESNext"
     ],
     "paths": {}
   },
