--- a/package.json
+++ b/package.json
@@ -5,13 +5,18 @@
     "build": "cross-env NODE_ENV=production esno scripts/esbuild.ts",
     "build:firefox": "cross-env NODE_ENV=production EXTENSION=firefox esno scripts/esbuild.ts"
   },
+  "type": "module",
   "devDependencies": {
+    "@babel/core": "7.24.0",
+    "@babel/types": "7.24.0",
     "@biomejs/biome": "1.6.1",
+    "@chialab/esbuild-plugin-babel": "0.18.0",
     "@fontsource-variable/fira-code": "5.0.17",
     "@fontsource-variable/noto-sans-sc": "5.0.5",
+    "@types/babel__core": "7.20.5",
     "@types/chrome": "0.0.263",
     "@types/fs-extra": "11.0.4",
-    "@types/node": "18.19.22",
+    "@types/node": "20.11.28",
     "@types/react": "18.2.66",
     "@types/react-dom": "18.2.22",
     "@types/webextension-polyfill": "0.10.7",
@@ -27,15 +32,12 @@
     "tailwindcss": "3.4.1",
     "ts-lib-enhance": "1.0.17",
     "typescript": "5.4.2",
-    "ulid": "2.3.0",
-    "unplugin-auto-import": "0.17.5",
-    "web-ext": "7.11.0",
-    "webextension-polyfill": "0.10.0"
+    "web-ext": "7.11.0"
   },
   "dependencies": {
-    "axios": "1.6.7",
+    "axios": "1.6.8",
     "clsx": "2.1.0",
-    "framer-motion": "11.0.13",
+    "framer-motion": "11.0.14",
     "i18next": "23.10.1",
     "lodash-es": "4.17.21",
     "react": "18.2.0",
@@ -43,6 +45,8 @@
     "react-i18next": "14.1.0",
     "rxjs": "8.0.0-alpha.14",
     "serialize-error": "11.0.3",
-    "typed-webext": "0.6.6"
+    "typed-webext": "0.6.6",
+    "ulid": "2.3.0",
+    "webextension-polyfill": "0.10.0"
   }
 }
