--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,9 @@
     "target": "ESNext",
     "strict": true,
     "alwaysStrict": true,
+    "jsx": "react",
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
     "exactOptionalPropertyTypes": true,
     "noImplicitAny": true,
     "noImplicitOverride": true,
