Only run on build

--- a/biome.json
+++ b/biome.json
@@ -14,9 +14,7 @@
       "**/*.js",
       "**/*.jsx"
     ],
-    "ignore": [
-      "**/auto-imports.d.ts"
-    ]
+    "ignore": []
   },
   "javascript": {
     "formatter": {
