--- a/package.json
+++ b/package.json
@@ -7,20 +7,20 @@
   },
   "type": "module",
   "devDependencies": {
-    "@babel/core": "7.24.0",
-    "@babel/types": "7.24.0",
+    "@babel/core": "7.24.1",
     "@biomejs/biome": "1.6.1",
     "@fontsource-variable/fira-code": "5.0.17",
     "@fontsource-variable/noto-sans-sc": "5.0.5",
     "@types/babel__core": "7.20.5",
     "@types/chrome": "0.0.263",
     "@types/fs-extra": "11.0.4",
-    "@types/node": "20.11.29",
+    "@types/node": "20.11.30",
     "@types/react": "18.2.67",
     "@types/react-dom": "18.2.22",
     "@types/webextension-polyfill": "0.10.7",
     "@ziloen/eslint-config": "0.1.21",
     "@ziloen/tailwind-config": "1.1.2",
+    "babel-plugin-annotate-module-pure": "1.0.0",
     "cross-env": "7.0.3",
     "esbuild": "0.20.2",
     "esbuild-plugin-copy": "2.1.1",
@@ -36,7 +36,7 @@
   "dependencies": {
     "axios": "1.6.8",
     "clsx": "2.1.0",
-    "framer-motion": "11.0.14",
+    "framer-motion": "11.0.15",
     "i18next": "23.10.1",
     "lodash-es": "4.17.21",
     "react": "18.2.0",
