Update manifest type

--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -17,6 +17,7 @@
   },
   "exclude": [],
   "include": [
-    "./**/*.ts", "esbuild.mjs", "utils.mjs", "plugins/babel.mjs", "manifest.mjs",
+    "./**/*.ts",
+    "./**/*.mjs",
   ]
 }
