--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "target": "ESNext",
     "strict": true,
     "alwaysStrict": true,
-    "jsx": "react",
+    "jsx": "react-jsx",
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "exactOptionalPropertyTypes": true,
@@ -25,7 +25,7 @@
     "stripInternal": true,
     "noEmit": true,
     "skipDefaultLibCheck": true,
-    "skipLibCheck": true,
+    "skipLibCheck": false,
     "forceConsistentCasingInFileNames": true,
     "allowUnreachableCode": true,
     "allowUnusedLabels": true,
