--- a/package.json
+++ b/package.json
@@ -3,19 +3,21 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development esno scripts/esbuild.mjs",
     "build": "cross-env NODE_ENV=production esno scripts/esbuild.mjs",
-    "build:firefox": "cross-env NODE_ENV=production EXTENSION=firefox esno scripts/esbuild.mjs"
+    "build:firefox": "cross-env NODE_ENV=production EXTENSION=firefox esno scripts/esbuild.mjs",
+    "typecheck": "tsc --noEmit"
   },
   "type": "module",
   "devDependencies": {
     "@babel/core": "7.24.3",
-    "@biomejs/biome": "1.6.1",
+    "@biomejs/biome": "1.6.2",
     "@fontsource-variable/fira-code": "5.0.17",
     "@fontsource-variable/noto-sans-sc": "5.0.5",
+    "@playwright/test": "1.42.1",
     "@types/babel__core": "7.20.5",
     "@types/chrome": "0.0.263",
     "@types/fs-extra": "11.0.4",
     "@types/node": "20.11.30",
-    "@types/react": "18.2.67",
+    "@types/react": "18.2.69",
     "@types/react-dom": "18.2.22",
     "@types/webextension-polyfill": "0.10.7",
     "@ziloen/eslint-config": "0.1.21",
@@ -28,6 +30,7 @@
     "eslint": "8.57.0",
     "esno": "4.7.0",
     "fs-extra": "11.2.0",
+    "playwright": "1.42.1",
     "tailwindcss": "3.4.1",
     "ts-lib-enhance": "1.0.17",
     "typescript": "5.4.3",
