--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "jsx": "react-jsx",
     "module": "ESNext",
     "moduleResolution": "Bundler",
-    "exactOptionalPropertyTypes": true,
+    "exactOptionalPropertyTypes": false,
     "noImplicitAny": true,
     "noImplicitOverride": true,
     "noImplicitReturns": true,
@@ -31,15 +31,10 @@
     "allowUnusedLabels": true,
     "noUncheckedIndexedAccess": true,
     "lib": [
-      "DOM",
       "ESNext",
-      "DOM.Iterable"
     ],
     "types": [
-      "ts-lib-enhance",
-      "ts-lib-enhance/highlight",
-      "ts-lib-enhance/view-transition",
-      "chrome"
+      "node"
     ],
     "paths": {
       "~/*": [
