--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -2,17 +2,12 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "exactOptionalPropertyTypes": true,
-    "allowJs": false,
+    "allowJs": true,
     "types": [
       "ts-lib-enhance",
       "ts-lib-enhance/highlight",
       "ts-lib-enhance/view-transition",
       "chrome",
     ],
-    "lib": [
-      "DOM",
-      "DOM.Iterable",
-      "ESNext",
-    ]
   }
 }
