--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,8 @@
     "allowUnusedLabels": true,
     "noUncheckedIndexedAccess": true,
     "lib": [
+      "DOM",
+      "DOM.Iterable",
       "ESNext",
     ],
     "types": [
