--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development esno scripts/esbuild.mjs",
-    "build": "cross-env NODE_ENV=production esno scripts/esbuild.mjs",
-    "build:firefox": "cross-env NODE_ENV=production EXTENSION=firefox esno scripts/esbuild.mjs",
+    "build": "cross-env NODE_ENV=production esno scripts/esbuild.mjs && web-ext build --filename=chrome.zip",
+    "build:firefox": "cross-env NODE_ENV=production EXTENSION=firefox esno scripts/esbuild.mjs && web-ext build --filename=firefox.xpi",
+    "start:chromium": "web-ext run --target=chromium",
+    "start:firefox": "web-ext run --target=firefox-desktop",
+    "pack:xpi": "web-ext build --filename=firefox.xpi",
+    "pack:zip": "web-ext build --filename=chrome.zip",
     "typecheck": "tsc --noEmit"
   },
   "type": "module",
@@ -50,5 +54,19 @@
     "typed-webext": "0.6.8",
     "ulid": "2.3.0",
     "webextension-polyfill": "0.10.0"
+  },
+  "webExt": {
+    "sourceDir": "dist/dev",
+    "artifactsDir": "dist",
+    "run": {
+      "browserConsole": false,
+      "target": [
+        "firefox-desktop"
+      ]
+    },
+    "build": {
+      "overwriteDest": true,
+      "filename": "extension.xpi"
+    }
   }
 }
