--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start:firefox": "web-ext run --target=firefox-desktop",
     "pack:xpi": "web-ext build --filename=firefox.xpi",
     "pack:zip": "web-ext build --filename=chrome.zip",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "lint": "eslint ."
   },
   "devDependencies": {
     "@babel/core": "7.24.4",
@@ -18,13 +19,13 @@
     "@fontsource-variable/noto-sans-sc": "5.0.5",
     "@playwright/test": "1.43.0",
     "@types/babel__core": "7.20.5",
-    "@types/chrome": "0.0.265",
+    "@types/chrome": "0.0.266",
     "@types/fs-extra": "11.0.4",
-    "@types/node": "20.12.4",
+    "@types/node": "20.12.5",
     "@types/react": "18.2.74",
     "@types/react-dom": "18.2.24",
     "@types/webextension-polyfill": "0.10.7",
-    "@ziloen/eslint-config": "0.1.22",
+    "@ziloen/eslint-config": "0.1.23",
     "@ziloen/tailwind-config": "1.1.2",
     "babel-plugin-annotate-module-pure": "1.0.2",
     "cross-env": "7.0.3",
