--- a/package.json
+++ b/package.json
@@ -10,20 +10,20 @@
     "pack:xpi": "web-ext build --filename=firefox.xpi",
     "pack:zip": "web-ext build --filename=chrome.zip",
     "typecheck": "tsc --noEmit",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "format": "prettier --write ."
   },
   "devDependencies": {
     "@babel/core": "7.24.4",
-    "@biomejs/biome": "1.6.4",
     "@fontsource-variable/fira-code": "5.0.17",
     "@fontsource-variable/noto-sans-sc": "5.0.5",
-    "@playwright/test": "1.43.0",
+    "@playwright/test": "1.43.1",
     "@types/babel__core": "7.20.5",
     "@types/chrome": "0.0.266",
     "@types/fs-extra": "11.0.4",
-    "@types/node": "20.12.6",
-    "@types/react": "18.2.75",
-    "@types/react-dom": "18.2.24",
+    "@types/node": "20.12.7",
+    "@types/react": "18.2.78",
+    "@types/react-dom": "18.2.25",
     "@types/webextension-polyfill": "0.10.7",
     "@ziloen/eslint-config": "0.1.23",
     "@ziloen/tailwind-config": "1.1.2",
@@ -35,17 +35,19 @@
     "eslint": "8.57.0",
     "esno": "4.7.0",
     "fs-extra": "11.2.0",
-    "playwright": "1.43.0",
+    "playwright": "1.43.1",
+    "prettier": "3.2.5",
+    "prettier-plugin-tailwindcss": "0.5.13",
     "tailwindcss": "3.4.3",
     "ts-lib-enhance": "1.0.17",
-    "typescript": "5.4.4",
+    "typescript": "5.4.5",
     "web-ext": "7.11.0"
   },
   "dependencies": {
     "axios": "1.6.8",
     "clsx": "2.1.0",
-    "framer-motion": "11.0.25",
-    "i18next": "23.11.0",
+    "framer-motion": "11.0.28",
+    "i18next": "23.11.2",
     "lodash-es": "4.17.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
