--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,15 @@
 {
   "[javascript]": {
-    "editor.defaultFormatter": "biomejs.biome"
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "[typescript]": {
-    "editor.defaultFormatter": "biomejs.biome"
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "[typescriptreact]": {
-    "editor.defaultFormatter": "biomejs.biome"
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[html]": {
+    "editor.defaultFormatter": "vscode.html-language-features"
   },
   "css.customData": [
     ".vscode/css-data.json"
@@ -16,5 +19,10 @@
   ],
   "eslint.experimental.useFlatConfig": true,
   "eslint.format.enable": false,
-  "prettier.enable": false
+  "prettier.enable": true,
+  "typescript.preferences.autoImportFileExcludePatterns": [
+    "node:console",
+    "console"
+  ],
+  "typescript.preferences.preferTypeOnlyAutoImports": true
 }
