--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,5 +46,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: chrome.zip
-          path: dist/chrome.zip
+          path: dist/dev
           retention-days: 30
