--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Lint
         run: npm run lint
 
-      - name: Build
+      - name: Build Chrome Extension
         run: npm run build
 
       - name: Install Playwright Browsers
@@ -46,5 +46,15 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: chrome.zip
-          path: dist/dev
+          path: dist/chrome.zip
+          retention-days: 30
+
+      - name: Build Firefox Extension
+        run: npm run build:firefox
+
+      - name: Upload build file
+        uses: actions/upload-artifact@v4
+        with:
+          name: firefox.zip
+          path: dist/firefox.xpi
           retention-days: 30
