--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development esno scripts/esbuild.mjs",
-    "build": "cross-env NODE_ENV=production esno scripts/esbuild.mjs && web-ext build --filename=chrome.zip",
-    "build:firefox": "cross-env NODE_ENV=production EXTENSION=firefox esno scripts/esbuild.mjs && web-ext build --filename=firefox.xpi",
+    "dev": "cross-env NODE_ENV=development node scripts/esbuild.mjs",
+    "build": "cross-env NODE_ENV=production node scripts/esbuild.mjs && web-ext build --filename=chrome.zip",
+    "build:firefox": "cross-env NODE_ENV=production EXTENSION=firefox node scripts/esbuild.mjs && web-ext build --filename=firefox.xpi",
     "start:chromium": "web-ext run --target=chromium",
     "start:firefox": "web-ext run --target=firefox-desktop",
     "pack:xpi": "web-ext build --filename=firefox.xpi",
@@ -15,38 +15,39 @@
   },
   "devDependencies": {
     "@babel/core": "7.24.4",
-    "@fontsource-variable/fira-code": "5.0.17",
-    "@fontsource-variable/noto-sans-sc": "5.0.5",
+    "@fontsource-variable/fira-code": "5.0.18",
+    "@fontsource-variable/noto-sans-sc": "5.0.6",
     "@playwright/test": "1.43.1",
+    "@tailwindcss/container-queries": "0.1.1",
     "@types/babel__core": "7.20.5",
     "@types/chrome": "0.0.266",
     "@types/fs-extra": "11.0.4",
     "@types/node": "20.12.7",
-    "@types/react": "18.2.78",
+    "@types/react": "18.2.79",
     "@types/react-dom": "18.2.25",
     "@types/webextension-polyfill": "0.10.7",
     "@ziloen/eslint-config": "0.1.23",
-    "@ziloen/tailwind-config": "1.1.2",
+    "@ziloen/tailwind-config": "1.1.6",
     "babel-plugin-annotate-module-pure": "1.0.2",
     "cross-env": "7.0.3",
     "esbuild": "0.20.2",
     "esbuild-plugin-copy": "2.1.1",
     "esbuild-style-plugin": "1.6.3",
     "eslint": "8.57.0",
-    "esno": "4.7.0",
     "fs-extra": "11.2.0",
     "playwright": "1.43.1",
     "prettier": "3.2.5",
-    "prettier-plugin-tailwindcss": "0.5.13",
+    "prettier-plugin-tailwindcss": "0.5.14",
     "tailwindcss": "3.4.3",
     "ts-lib-enhance": "1.0.17",
+    "tsx": "4.7.2",
     "typescript": "5.4.5",
     "web-ext": "7.11.0"
   },
   "dependencies": {
     "axios": "1.6.8",
     "clsx": "2.1.0",
-    "framer-motion": "11.0.28",
+    "framer-motion": "11.1.7",
     "i18next": "23.11.2",
     "lodash-es": "4.17.21",
     "react": "18.2.0",
@@ -56,7 +57,7 @@
     "serialize-error": "11.0.3",
     "typed-webext": "0.6.12",
     "ulid": "2.3.0",
-    "webextension-polyfill": "0.10.0"
+    "webextension-polyfill": "0.11.0"
   },
   "webExt": {
     "sourceDir": "dist/dev",
