--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,9 @@ on:
 jobs:
   test:
     timeout-minutes: 5
-    runs-on: ubuntu-latest
+    # https://github.com/microsoft/playwright/issues/30368
+    # ubuntu-22.04 is not supported yet
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v4
 
