--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development node scripts/esbuild.mjs",
-    "build": "cross-env NODE_ENV=production node scripts/esbuild.mjs && web-ext build --filename=chrome.zip",
-    "build:firefox": "cross-env NODE_ENV=production EXTENSION=firefox node scripts/esbuild.mjs && web-ext build --filename=firefox.xpi",
+    "dev": "cross-env NODE_ENV=development node scripts/esbuild.js",
+    "build": "cross-env NODE_ENV=production node scripts/esbuild.js && web-ext build --filename=chrome.zip",
+    "build:firefox": "cross-env NODE_ENV=production EXTENSION=firefox node scripts/esbuild.js && web-ext build --filename=firefox.xpi",
     "start:chromium": "web-ext run --target=chromium",
     "start:firefox": "web-ext run --target=firefox-desktop",
     "pack:xpi": "web-ext build --filename=firefox.xpi",
