--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "@types/chrome": "0.0.266",
     "@types/fs-extra": "11.0.4",
     "@types/node": "20.12.7",
-    "@types/react": "18.2.79",
-    "@types/react-dom": "18.2.25",
+    "@types/react": "18.3.0",
+    "@types/react-dom": "18.3.0",
     "@types/webextension-polyfill": "0.10.7",
     "@ziloen/eslint-config": "0.1.23",
-    "@ziloen/tailwind-config": "1.1.8",
+    "@ziloen/tailwind-config": "1.1.9",
     "babel-plugin-annotate-module-pure": "1.0.2",
     "chokidar": "3.6.0",
     "cross-env": "7.0.3",
@@ -42,8 +42,8 @@
     "prettier-plugin-tailwindcss": "0.5.14",
     "tailwindcss": "3.4.3",
     "ts-lib-enhance": "1.0.17",
-    "tsx": "4.7.2",
-    "typescript": "5.4.5",
+    "tsx": "4.7.3",
+    "typescript": "5.5.0-beta",
     "web-ext": "7.11.0"
   },
   "dependencies": {
@@ -52,8 +52,8 @@
     "framer-motion": "11.1.7",
     "i18next": "23.11.2",
     "lodash-es": "4.17.21",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "18.3.0",
+    "react-dom": "18.3.0",
     "react-i18next": "14.1.1",
     "rxjs": "8.0.0-alpha.14",
     "serialize-error": "11.0.3",
