--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "esbuild-style-plugin": "1.6.3",
     "eslint": "8.57.0",
     "fs-extra": "11.2.0",
+    "globby": "14.0.1",
     "playwright": "1.43.1",
     "prettier": "3.2.5",
     "prettier-plugin-tailwindcss": "0.5.14",
