--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,7 @@
 # https://docs.npmjs.com/cli/v10/using-npm/config
 
-# registry=https://registry.npmmirror.com
+audit=false
+fund=false
+registry=https://registry.npmmirror.com
 save-exact=true
+update-notifier=false
