--- a/.npmrc
+++ b/.npmrc
@@ -2,6 +2,6 @@
 
 audit=false
 fund=false
-registry=https://registry.npmmirror.com
+registry=https://registry.npmjs.org
 save-exact=true
 update-notifier=false
