--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,7 +49,21 @@ jobs:
         with:
           name: chrome.zip
           path: dist/chrome.zip
-          retention-days: 30
+          retention-days: 90
+
+      - name: Upload metafile
+        uses: actions/upload-artifact@v4
+        with:
+          name: meta.json
+          path: dist/meta.json
+          retention-days: 90
+
+      - name: Upload metafile
+        uses: actions/upload-artifact@v4
+        with:
+          name: content-script-meta.json
+          path: dist/content-script-meta.json
+          retention-days: 90
 
       - name: Build Firefox Extension
         run: npm run build:firefox
@@ -59,4 +73,4 @@ jobs:
         with:
           name: firefox.zip
           path: dist/firefox.xpi
-          retention-days: 30
+          retention-days: 90
