--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,7 +42,7 @@ jobs:
         with:
           name: playwright-report
           path: playwright-report/
-          retention-days: 30
+          retention-days: 90
 
       - name: Upload build file
         uses: actions/upload-artifact@v4
@@ -54,15 +54,10 @@ jobs:
       - name: Upload metafile
         uses: actions/upload-artifact@v4
         with:
-          name: meta.json
-          path: dist/meta.json
-          retention-days: 90
-
-      - name: Upload metafile
-        uses: actions/upload-artifact@v4
-        with:
-          name: content-script-meta.json
-          path: dist/content-script-meta.json
+          name: Meta files
+          path: |
+            dist/meta.json
+            dist/content-script-meta.json
           retention-days: 90
 
       - name: Build Firefox Extension
