--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
     "test:playwright": "playwright test"
   },
   "devDependencies": {
-    "@babel/core": "7.24.6",
+    "@babel/core": "7.24.7",
     "@fontsource-variable/fira-code": "5.0.18",
     "@fontsource-variable/noto-sans-sc": "5.0.6",
     "@playwright/test": "1.44.1",
     "@types/babel__core": "7.20.5",
     "@types/chrome": "0.0.268",
     "@types/fs-extra": "11.0.4",
-    "@types/node": "20.14.0",
+    "@types/node": "20.14.2",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "@types/webextension-polyfill": "0.10.7",
@@ -32,19 +32,19 @@
     "babel-plugin-annotate-module-pure": "1.0.2",
     "chokidar": "3.6.0",
     "cross-env": "7.0.3",
-    "esbuild": "0.21.4",
+    "esbuild": "0.21.5",
     "esbuild-plugin-copy": "2.1.1",
     "esbuild-style-plugin": "1.6.3",
     "eslint": "9.4.0",
     "fs-extra": "11.2.0",
     "globby": "14.0.1",
     "playwright": "1.44.1",
-    "prettier": "3.3.0",
-    "prettier-plugin-tailwindcss": "0.6.1",
-    "tailwindcss": "3.4.3",
+    "prettier": "3.3.1",
+    "prettier-plugin-tailwindcss": "0.6.2",
+    "tailwindcss": "3.4.4",
     "ts-lib-enhance": "1.0.17",
-    "tsx": "4.11.2",
-    "typescript": "5.5.0-beta",
+    "tsx": "4.15.1",
+    "typescript": "5.5.1-rc",
     "web-ext": "8.0.0"
   },
   "dependencies": {
