--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "@types/babel__core": "7.20.5",
     "@types/chrome": "0.0.268",
     "@types/fs-extra": "11.0.4",
-    "@types/node": "20.14.2",
+    "@types/node": "20.14.7",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "@types/webextension-polyfill": "0.10.7",
-    "@ziloen/eslint-config": "0.1.35",
+    "@ziloen/eslint-config": "0.1.36",
     "@ziloen/tailwind-config": "1.1.13",
     "babel-plugin-annotate-module-pure": "1.0.2",
     "chokidar": "3.6.0",
@@ -40,12 +40,12 @@
     "globby": "14.0.1",
     "playwright": "1.44.1",
     "prettier": "3.3.2",
-    "prettier-plugin-tailwindcss": "0.6.4",
+    "prettier-plugin-tailwindcss": "0.6.5",
     "tailwindcss": "3.4.4",
     "ts-lib-enhance": "1.0.17",
-    "tsx": "4.15.5",
-    "typescript": "5.5.1-rc",
-    "web-ext": "8.1.0"
+    "tsx": "4.15.7",
+    "typescript": "5.5.2",
+    "web-ext": "8.2.0"
   },
   "dependencies": {
     "axios": "1.7.2",
