--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
     "stripInternal": true,
     "noEmit": true,
     "skipDefaultLibCheck": true,
-    "skipLibCheck": false,
+    "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "allowUnreachableCode": true,
     "allowUnusedLabels": true,
