--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "@babel/core": "7.25.2",
     "@fontsource-variable/fira-code": "5.1.0",
     "@fontsource-variable/noto-sans-sc": "5.1.0",
-    "@playwright/test": "1.47.0",
+    "@playwright/test": "1.47.1",
     "@types/babel__core": "7.20.5",
-    "@types/chrome": "0.0.270",
+    "@types/chrome": "0.0.271",
     "@types/fs-extra": "11.0.4",
-    "@types/node": "22.5.4",
-    "@types/react": "18.3.5",
+    "@types/node": "22.5.5",
+    "@types/react": "18.3.7",
     "@types/react-dom": "18.3.0",
     "@types/webextension-polyfill": "0.12.1",
     "@ziloen/eslint-config": "0.1.48",
@@ -38,14 +38,15 @@
     "eslint": "9.10.0",
     "fs-extra": "11.2.0",
     "globby": "14.0.2",
-    "playwright": "1.47.0",
+    "playwright": "1.47.1",
     "prettier": "3.3.3",
     "prettier-plugin-tailwindcss": "0.6.6",
-    "tailwindcss": "3.4.11",
+    "react-refresh": "0.14.2",
+    "tailwindcss": "3.4.12",
     "ts-lib-enhance": "1.0.18",
     "tsx": "4.19.1",
     "typescript": "5.6.2",
-    "web-ext": "8.2.0"
+    "web-ext": "8.3.0"
   },
   "dependencies": {
     "axios": "1.7.7",
@@ -55,7 +56,7 @@
     "lodash-es": "4.17.21",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-i18next": "15.0.1",
+    "react-i18next": "15.0.2",
     "rxjs": "8.0.0-alpha.14",
     "serialize-error": "11.0.3",
     "typed-webext": "0.6.12",
