--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development node scripts/esbuild.js",
     "build": "cross-env NODE_ENV=production node scripts/esbuild.js && web-ext build --filename=chrome.zip",
+    "build:rolldown": "cross-env NODE_ENV=production rolldown --config ./rolldown.config.js",
     "build:firefox": "cross-env NODE_ENV=production EXTENSION=firefox node scripts/esbuild.js && web-ext build --filename=firefox.xpi",
     "start:chromium": "web-ext run --target=chromium",
     "start:firefox": "web-ext run --target=firefox-desktop",
@@ -16,51 +17,54 @@
     "test:playwright": "playwright test"
   },
   "devDependencies": {
-    "@babel/core": "7.25.8",
-    "@fontsource-variable/fira-code": "5.1.0",
-    "@fontsource-variable/noto-sans-sc": "5.1.0",
-    "@playwright/test": "1.48.1",
+    "@babel/core": "7.26.9",
+    "@fontsource-variable/fira-code": "5.1.1",
+    "@fontsource-variable/noto-sans-sc": "5.1.1",
+    "@playwright/test": "1.50.1",
+    "@rollup/plugin-url": "8.0.2",
+    "@tailwindcss/postcss": "4.0.9",
     "@types/babel__core": "7.20.5",
-    "@types/chrome": "0.0.279",
+    "@types/chrome": "0.0.306",
     "@types/fs-extra": "11.0.4",
-    "@types/node": "22.7.7",
-    "@types/react": "18.3.11",
-    "@types/react-dom": "18.3.1",
-    "@types/webextension-polyfill": "0.12.1",
-    "@ziloen/eslint-config": "0.1.50",
-    "@ziloen/tailwind-config": "1.1.20",
+    "@types/node": "22.13.5",
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4",
+    "@types/webextension-polyfill": "0.12.2",
+    "@ziloen/eslint-config": "0.1.59",
+    "@ziloen/tailwind-config": "2.0.2",
     "babel-plugin-annotate-module-pure": "1.0.2",
-    "chokidar": "4.0.1",
+    "chokidar": "4.0.3",
     "cross-env": "7.0.3",
-    "esbuild": "0.24.0",
+    "esbuild": "0.25.0",
     "esbuild-plugin-copy": "2.1.1",
     "esbuild-style-plugin": "1.6.3",
-    "eslint": "9.13.0",
-    "fs-extra": "11.2.0",
-    "globby": "14.0.2",
-    "playwright": "1.48.1",
-    "prettier": "3.3.3",
-    "prettier-plugin-tailwindcss": "0.6.8",
-    "react-refresh": "0.14.2",
-    "tailwindcss": "3.4.14",
-    "ts-lib-enhance": "1.0.19",
-    "tsx": "4.19.1",
-    "typescript": "5.6.3",
-    "web-ext": "8.3.0"
+    "eslint": "9.21.0",
+    "fs-extra": "11.3.0",
+    "globby": "14.1.0",
+    "playwright": "1.50.1",
+    "prettier": "3.5.2",
+    "prettier-plugin-tailwindcss": "0.6.11",
+    "react-refresh": "0.16.0",
+    "rolldown": "1.0.0-beta.3-commit.a36bf63",
+    "tailwindcss": "4.0.9",
+    "ts-lib-enhance": "1.0.20",
+    "tsx": "4.19.3",
+    "typescript": "5.7.3",
+    "web-ext": "8.4.0"
   },
   "dependencies": {
-    "axios": "1.7.7",
+    "axios": "1.8.1",
     "clsx": "2.1.1",
-    "framer-motion": "11.11.9",
-    "i18next": "23.16.2",
+    "i18next": "24.2.2",
     "lodash-es": "4.17.21",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-i18next": "15.1.0",
+    "motion": "12.4.7",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-i18next": "15.4.1",
     "rxjs": "8.0.0-alpha.14",
-    "serialize-error": "11.0.3",
+    "serialize-error": "12.0.0",
     "typed-webext": "0.6.12",
-    "ulid": "2.3.0",
+    "uuid": "11.1.0",
     "webextension-polyfill": "0.12.0"
   },
   "webExt": {
