--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "type": "module",
   "scripts": {
     "dev": "cross-env NODE_ENV=development node scripts/esbuild.js",
-    "build": "cross-env NODE_ENV=production node scripts/esbuild.js && web-ext build --filename=chrome.zip",
-    "build:rolldown": "cross-env NODE_ENV=production rolldown --config ./rolldown.config.js",
+    "build": "cross-env NODE_ENV=production rolldown --config ./rolldown.config.js && tsx ./scripts/manifest.js && web-ext build --filename=chrome.zip",
+    "build:esbuild": "cross-env NODE_ENV=production node scripts/esbuild.js && web-ext build --filename=chrome.zip",
     "build:firefox": "cross-env NODE_ENV=production EXTENSION=firefox node scripts/esbuild.js && web-ext build --filename=firefox.xpi",
     "start:chromium": "web-ext run --target=chromium",
     "start:firefox": "web-ext run --target=firefox-desktop",
@@ -17,17 +17,17 @@
     "test:playwright": "playwright test"
   },
   "devDependencies": {
-    "@babel/core": "7.26.9",
+    "@babel/core": "7.26.10",
     "@fontsource-variable/fira-code": "5.2.5",
     "@fontsource-variable/noto-sans-sc": "5.2.5",
-    "@playwright/test": "1.51.0",
+    "@playwright/test": "1.51.1",
     "@rollup/plugin-url": "8.0.2",
-    "@tailwindcss/postcss": "4.0.12",
+    "@tailwindcss/postcss": "4.0.17",
     "@types/babel__core": "7.20.5",
-    "@types/chrome": "0.0.308",
+    "@types/chrome": "0.0.312",
     "@types/fs-extra": "11.0.4",
-    "@types/node": "22.13.9",
-    "@types/react": "19.0.10",
+    "@types/node": "22.13.14",
+    "@types/react": "19.0.12",
     "@types/react-dom": "19.0.4",
     "@types/webextension-polyfill": "0.12.3",
     "@ziloen/eslint-config": "0.1.60",
@@ -35,29 +35,29 @@
     "babel-plugin-annotate-module-pure": "1.0.2",
     "chokidar": "4.0.3",
     "cross-env": "7.0.3",
-    "esbuild": "0.25.0",
+    "esbuild": "0.25.1",
     "esbuild-plugin-copy": "2.1.1",
     "esbuild-style-plugin": "1.6.3",
-    "eslint": "9.21.0",
+    "eslint": "9.23.0",
     "fs-extra": "11.3.0",
     "globby": "14.1.0",
-    "playwright": "1.51.0",
+    "playwright": "1.51.1",
     "prettier": "3.5.3",
     "prettier-plugin-tailwindcss": "0.6.11",
     "react-refresh": "0.16.0",
-    "rolldown": "1.0.0-beta.3-commit.4666fd5",
-    "tailwindcss": "4.0.12",
+    "rolldown": "1.0.0-beta.7-commit.7ddcaea",
+    "tailwindcss": "4.0.17",
     "ts-lib-enhance": "1.0.21",
     "tsx": "4.19.3",
     "typescript": "5.8.2",
-    "web-ext": "8.4.0"
+    "web-ext": "8.5.0"
   },
   "dependencies": {
-    "axios": "1.8.2",
+    "axios": "1.8.4",
     "clsx": "2.1.1",
-    "i18next": "24.2.2",
+    "i18next": "24.2.3",
     "lodash-es": "4.17.21",
-    "motion": "12.4.10",
+    "motion": "12.6.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-i18next": "15.4.1",
