--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "exactOptionalPropertyTypes": true,
+    "erasableSyntaxOnly": false,
     "allowJs": true,
     "types": [
       "ts-lib-enhance",
