--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development node scripts/esbuild.js",
-    "build": "cross-env NODE_ENV=production rolldown --config ./rolldown.config.js && tsx ./scripts/manifest.js && web-ext build --filename=chrome.zip",
+    "dev": "cross-env NODE_ENV=development node scripts/rolldown.js",
+    "build": "cross-env NODE_ENV=production node scripts/rolldown.js && web-ext build --filename=chrome.zip",
+    "dev:esbuild": "cross-env NODE_ENV=development node scripts/esbuild.js",
     "build:esbuild": "cross-env NODE_ENV=production node scripts/esbuild.js && web-ext build --filename=chrome.zip",
     "build:firefox": "cross-env NODE_ENV=production EXTENSION=firefox node scripts/esbuild.js && web-ext build --filename=firefox.xpi",
     "start:chromium": "web-ext run --target=chromium",
@@ -24,7 +25,7 @@
     "@rollup/plugin-url": "8.0.2",
     "@tailwindcss/postcss": "4.0.17",
     "@types/babel__core": "7.20.5",
-    "@types/chrome": "0.0.312",
+    "@types/chrome": "0.0.313",
     "@types/fs-extra": "11.0.4",
     "@types/node": "22.13.14",
     "@types/react": "19.0.12",
@@ -35,7 +36,7 @@
     "babel-plugin-annotate-module-pure": "1.0.2",
     "chokidar": "4.0.3",
     "cross-env": "7.0.3",
-    "esbuild": "0.25.1",
+    "esbuild": "0.25.2",
     "esbuild-plugin-copy": "2.1.1",
     "esbuild-style-plugin": "1.6.3",
     "eslint": "9.23.0",
@@ -44,8 +45,9 @@
     "playwright": "1.51.1",
     "prettier": "3.5.3",
     "prettier-plugin-tailwindcss": "0.6.11",
-    "react-refresh": "0.16.0",
-    "rolldown": "1.0.0-beta.7-commit.7ddcaea",
+    "react-refresh": "0.17.0",
+    "rolldown": "1.0.0-beta.7-commit.139c54d",
+    "rollup-plugin-copy": "3.5.0",
     "tailwindcss": "4.0.17",
     "ts-lib-enhance": "1.0.21",
     "tsx": "4.19.3",
@@ -58,8 +60,8 @@
     "i18next": "24.2.3",
     "lodash-es": "4.17.21",
     "motion": "12.6.2",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-i18next": "15.4.1",
     "rxjs": "8.0.0-alpha.14",
     "serialize-error": "12.0.0",
