fix error when loading content-script

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -6,10 +6,10 @@
   "singleQuote": true,
   "quoteProps": "as-needed",
   "jsxSingleQuote": false,
-  "trailingComma": "es5",
+  "trailingComma": "all",
   "bracketSpacing": true,
   "bracketSameLine": false,
-  "arrowParens": "avoid",
+  "arrowParens": "always",
   "htmlWhitespaceSensitivity": "css",
   "objectWrap": "preserve",
   "endOfLine": "lf",
