--- a/package.json
+++ b/package.json
@@ -16,24 +16,24 @@
     "test:playwright": "playwright test"
   },
   "devDependencies": {
-    "@babel/core": "7.27.1",
+    "@babel/core": "7.27.3",
     "@fontsource-variable/fira-code": "5.2.6",
     "@fontsource-variable/noto-sans-sc": "5.2.5",
     "@playwright/test": "1.52.0",
-    "@tailwindcss/postcss": "4.1.7",
+    "@tailwindcss/postcss": "4.1.8",
     "@types/babel__core": "7.20.5",
-    "@types/chrome": "0.0.323",
+    "@types/chrome": "0.0.325",
     "@types/fs-extra": "11.0.4",
-    "@types/node": "22.15.19",
-    "@types/react": "19.1.4",
+    "@types/node": "22.15.27",
+    "@types/react": "19.1.6",
     "@types/react-dom": "19.1.5",
     "@types/webextension-polyfill": "0.12.3",
     "@ziloen/eslint-config": "0.1.63",
-    "@ziloen/tailwind-config": "2.0.3",
+    "@ziloen/tailwind-config": "2.0.4",
     "babel-plugin-annotate-module-pure": "1.0.2",
     "chokidar": "4.0.3",
     "cross-env": "7.0.3",
-    "esbuild": "0.25.4",
+    "esbuild": "0.25.5",
     "esbuild-plugin-copy": "2.1.1",
     "esbuild-style-plugin": "1.6.3",
     "eslint": "9.27.0",
@@ -42,23 +42,23 @@
     "playwright": "1.52.0",
     "prettier": "3.5.3",
     "prettier-plugin-tailwindcss": "0.6.11",
-    "rolldown": "1.0.0-beta.8-commit.360c072",
+    "rolldown": "1.0.0-beta.10",
     "rollup-plugin-copy": "3.5.0",
-    "tailwindcss": "4.1.7",
+    "tailwindcss": "4.1.8",
     "ts-lib-enhance": "1.0.21",
     "tsx": "4.19.4",
     "typescript": "5.8.3",
-    "web-ext": "8.6.0"
+    "web-ext": "8.7.1"
   },
   "dependencies": {
     "axios": "1.9.0",
     "clsx": "2.1.1",
-    "i18next": "25.1.3",
+    "i18next": "25.2.1",
     "lodash-es": "4.17.21",
-    "motion": "12.12.1",
+    "motion": "12.15.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-i18next": "15.5.1",
+    "react-i18next": "15.5.2",
     "rxjs": "8.0.0-alpha.14",
     "serialize-error": "12.0.0",
     "typed-webext": "0.6.13",
