--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:firefox": "cross-env NODE_ENV=production EXTENSION=firefox node scripts/esbuild.js && web-ext build --filename=firefox.xpi",
     "start:chromium": "web-ext run --target=chromium",
     "start:firefox": "web-ext run --target=firefox-desktop",
-    "typecheck": "tsc --noEmit",
+    "typecheck": "tsgo --noEmit",
     "lint": "eslint .",
     "format": "prettier --write .",
     "init:playwright": "playwright install chromium --with-deps",
@@ -20,14 +20,15 @@
     "@fontsource-variable/fira-code": "5.2.6",
     "@fontsource-variable/noto-sans-sc": "5.2.6",
     "@playwright/test": "1.53.0",
-    "@tailwindcss/postcss": "4.1.8",
+    "@tailwindcss/postcss": "4.1.10",
     "@types/babel__core": "7.20.5",
     "@types/chrome": "0.0.326",
     "@types/fs-extra": "11.0.4",
-    "@types/node": "24.0.0",
-    "@types/react": "19.1.7",
+    "@types/node": "24.0.1",
+    "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
     "@types/webextension-polyfill": "0.12.3",
+    "@typescript/native-preview": "7.0.0-dev.20250612.1",
     "@ziloen/eslint-config": "0.1.63",
     "@ziloen/tailwind-config": "2.0.5",
     "babel-plugin-annotate-module-pure": "1.0.2",
@@ -42,9 +43,9 @@
     "playwright": "1.53.0",
     "prettier": "3.5.3",
     "prettier-plugin-tailwindcss": "0.6.12",
-    "rolldown": "1.0.0-beta.14",
+    "rolldown": "1.0.0-beta.15",
     "rollup-plugin-copy": "3.5.0",
-    "tailwindcss": "4.1.8",
+    "tailwindcss": "4.1.10",
     "ts-lib-enhance": "1.0.21",
     "typescript": "5.8.3",
     "web-ext": "8.7.1"
@@ -54,7 +55,7 @@
     "clsx": "2.1.1",
     "i18next": "25.2.1",
     "lodash-es": "4.17.21",
-    "motion": "12.16.0",
+    "motion": "12.17.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-i18next": "15.5.2",
