--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "composite": true,
     "baseUrl": "./",
     // src/manifest.ts need this
     // https://github.com/microsoft/TypeScript/pull/49886
@@ -10,9 +11,9 @@
     "alwaysStrict": true,
     "jsx": "react-jsx",
     "module": "ESNext",
-    "moduleResolution": "Bundler",
-    "exactOptionalPropertyTypes": false,
-    "erasableSyntaxOnly": true,
+    "moduleResolution": "bundler",
+    "exactOptionalPropertyTypes": true,
+    "erasableSyntaxOnly": false,
     "noImplicitAny": true,
     "noImplicitOverride": true,
     "noImplicitReturns": true,
@@ -37,7 +38,6 @@
       "ESNext",
     ],
     "types": [
-      "node",
       "chrome",
     ],
     "paths": {
@@ -49,12 +49,19 @@
       ],
     },
   },
+  "include": [
+    "src"
+  ],
   "exclude": [
     "dist",
     "node_modules",
-    "public",
-    "scripts",
-    "test-results",
     "playwright-report",
+    "public",
+    "test-results",
+  ],
+  "references": [
+    {
+      "path": "./tsconfig.node.json"
+    }
   ]
 }
