Add log in build

--- a/package.json
+++ b/package.json
@@ -3,17 +3,30 @@
   "type": "module",
   "scripts": {
     "dev": "cross-env NODE_ENV=development node scripts/rolldown.js",
-    "build": "cross-env NODE_ENV=production node scripts/rolldown.js && web-ext build --filename=chrome.zip",
-    "dev:esbuild": "cross-env NODE_ENV=development node scripts/esbuild.js",
-    "build:esbuild": "cross-env NODE_ENV=production node scripts/esbuild.js && web-ext build --filename=chrome.zip",
-    "build:firefox": "cross-env NODE_ENV=production EXTENSION=firefox node scripts/esbuild.js && web-ext build --filename=firefox.xpi",
-    "start:chromium": "web-ext run --target=chromium",
-    "start:firefox": "web-ext run --target=firefox-desktop",
+    "build": "cross-env NODE_ENV=production node scripts/rolldown.js && web-ext build -n chrome.zip",
+    "build:firefox": "cross-env NODE_ENV=production EXTENSION=firefox node scripts/rolldown.js && web-ext build -n firefox.xpi",
+    "start:chromium": "web-ext run -t chromium",
+    "start:firefox": "web-ext run -t firefox-desktop",
     "typecheck": "tsgo --noEmit",
     "lint": "eslint .",
     "format": "prettier --write .",
     "init:playwright": "playwright install chromium --with-deps",
     "test:playwright": "playwright test"
+  },
+  "dependencies": {
+    "axios": "1.9.0",
+    "clsx": "2.1.1",
+    "i18next": "25.2.1",
+    "lodash-es": "4.17.21",
+    "motion": "12.17.3",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-i18next": "15.5.3",
+    "rxjs": "8.0.0-alpha.14",
+    "serialize-error": "12.0.0",
+    "typed-webext": "0.6.13",
+    "uuid": "11.1.0",
+    "webextension-polyfill": "0.12.0"
   },
   "devDependencies": {
     "@babel/core": "7.27.4",
@@ -32,6 +45,7 @@
     "@ziloen/eslint-config": "0.1.63",
     "@ziloen/tailwind-config": "2.0.5",
     "babel-plugin-annotate-module-pure": "1.0.2",
+    "chalk": "5.4.1",
     "chokidar": "4.0.3",
     "cross-env": "7.0.3",
     "esbuild": "0.25.5",
@@ -49,21 +63,6 @@
     "ts-lib-enhance": "1.0.21",
     "typescript": "5.8.3",
     "web-ext": "8.7.1"
-  },
-  "dependencies": {
-    "axios": "1.9.0",
-    "clsx": "2.1.1",
-    "i18next": "25.2.1",
-    "lodash-es": "4.17.21",
-    "motion": "12.17.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-i18next": "15.5.2",
-    "rxjs": "8.0.0-alpha.14",
-    "serialize-error": "12.0.0",
-    "typed-webext": "0.6.13",
-    "uuid": "11.1.0",
-    "webextension-polyfill": "0.12.0"
   },
   "webExt": {
     "sourceDir": "dist/dev",
