--- a/package.json
+++ b/package.json
@@ -37,11 +37,12 @@
     "@types/babel__core": "7.20.5",
     "@types/chrome": "0.0.326",
     "@types/fs-extra": "11.0.4",
+    "@types/lodash-es": "4.17.12",
     "@types/node": "24.0.3",
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
     "@types/webextension-polyfill": "0.12.3",
-    "@typescript/native-preview": "7.0.0-dev.20250617.1",
+    "@typescript/native-preview": "7.0.0-dev.20250618.1",
     "@ziloen/eslint-config": "0.1.63",
     "@ziloen/tailwind-config": "2.0.6",
     "babel-plugin-annotate-module-pure": "1.0.2",
@@ -57,7 +58,7 @@
     "playwright": "1.53.0",
     "prettier": "3.5.3",
     "prettier-plugin-tailwindcss": "0.6.12",
-    "rolldown": "1.0.0-beta.16",
+    "rolldown": "1.0.0-beta.17",
     "rollup-plugin-copy": "3.5.0",
     "tailwindcss": "4.1.10",
     "ts-lib-enhance": "1.0.21",
