Add babel preset env

--- a/package.json
+++ b/package.json
@@ -30,9 +30,13 @@
   },
   "devDependencies": {
     "@babel/core": "7.27.4",
+    "@babel/preset-env": "7.27.2",
+    "@babel/preset-react": "7.27.1",
+    "@babel/preset-typescript": "7.27.1",
     "@fontsource-variable/fira-code": "5.2.6",
     "@fontsource-variable/noto-sans-sc": "5.2.6",
     "@playwright/test": "1.53.1",
+    "@rollup/plugin-babel": "6.0.4",
     "@tailwindcss/postcss": "4.1.10",
     "@types/babel__core": "7.20.5",
     "@types/chrome": "0.0.326",
@@ -42,12 +46,13 @@
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
     "@types/webextension-polyfill": "0.12.3",
-    "@typescript/native-preview": "7.0.0-dev.20250619.1",
+    "@typescript/native-preview": "7.0.0-dev.20250620.1",
     "@ziloen/eslint-config": "0.1.63",
     "@ziloen/tailwind-config": "2.0.6",
     "babel-plugin-annotate-module-pure": "1.0.2",
     "chalk": "5.4.1",
     "chokidar": "4.0.3",
+    "core-js": "3.43.0",
     "cross-env": "7.0.3",
     "esbuild": "0.25.5",
     "esbuild-plugin-copy": "2.1.1",
@@ -57,13 +62,13 @@
     "globby": "14.1.0",
     "playwright": "1.53.1",
     "prettier": "3.5.3",
-    "prettier-plugin-tailwindcss": "0.6.12",
+    "prettier-plugin-tailwindcss": "0.6.13",
     "rolldown": "1.0.0-beta.18",
     "rollup-plugin-copy": "3.5.0",
     "tailwindcss": "4.1.10",
     "ts-lib-enhance": "1.0.21",
     "typescript": "5.8.3",
-    "web-ext": "8.7.1"
+    "web-ext": "8.8.0"
   },
   "webExt": {
     "sourceDir": "dist/dev",
