--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
   "dependencies": {
     "axios": "1.10.0",
     "clsx": "2.1.1",
+    "es-toolkit": "1.39.4",
     "i18next": "25.2.1",
-    "lodash-es": "4.17.21",
-    "motion": "12.18.1",
+    "motion": "12.19.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-i18next": "15.5.3",
@@ -41,13 +41,12 @@
     "@types/babel__core": "7.20.5",
     "@types/chrome": "0.0.326",
     "@types/fs-extra": "11.0.4",
-    "@types/lodash-es": "4.17.12",
     "@types/node": "24.0.3",
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
     "@types/webextension-polyfill": "0.12.3",
-    "@typescript/native-preview": "7.0.0-dev.20250620.1",
-    "@ziloen/eslint-config": "0.1.63",
+    "@typescript/native-preview": "7.0.0-dev.20250624.1",
+    "@ziloen/eslint-config": "0.1.64",
     "@ziloen/tailwind-config": "2.0.6",
     "babel-plugin-annotate-module-pure": "1.0.2",
     "chalk": "5.4.1",
@@ -61,9 +60,9 @@
     "fs-extra": "11.3.0",
     "globby": "14.1.0",
     "playwright": "1.53.1",
-    "prettier": "3.5.3",
+    "prettier": "3.6.0",
     "prettier-plugin-tailwindcss": "0.6.13",
-    "rolldown": "1.0.0-beta.18",
+    "rolldown": "1.0.0-beta.19",
     "rollup-plugin-copy": "3.5.0",
     "tailwindcss": "4.1.10",
     "ts-lib-enhance": "1.0.21",
