--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "prettier-plugin-tailwindcss": "0.6.13",
     "rolldown": "1.0.0-beta.19",
     "rollup-plugin-copy": "3.5.0",
+    "sonda": "0.8.2",
     "tailwindcss": "4.1.10",
     "ts-lib-enhance": "1.0.21",
     "typescript": "5.8.3",
