chore: use node native env

--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development node scripts/rolldown.js",
-    "dev:firefox": "cross-env NODE_ENV=development EXTENSION=firefox node scripts/rolldown.js",
-    "build": "cross-env NODE_ENV=production node scripts/rolldown.js && web-ext build -n chrome.zip",
-    "build:firefox": "cross-env NODE_ENV=production EXTENSION=firefox node scripts/rolldown.js && web-ext build -n firefox.xpi",
+    "dev": "node --env-file=.env scripts/rolldown.js",
+    "dev:firefox": "node --env-file=.env --env-file=.env.firefox scripts/rolldown.js",
+    "build": "node --env-file=.env.prod scripts/rolldown.js && web-ext build -n chrome.zip",
+    "build:firefox": "node --env-file=.env.prod --env-file=.env.firefox scripts/rolldown.js && web-ext build -n firefox.xpi",
     "start:chromium": "web-ext run -t chromium",
     "start:firefox": "web-ext run -t firefox-desktop",
-    "typecheck": "tsgo --noEmit",
+    "typecheck": "tsc --noEmit",
     "lint": "eslint .",
     "format": "prettier --write .",
     "init:playwright": "playwright install chromium --with-deps",
@@ -46,15 +46,13 @@
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
     "@types/webextension-polyfill": "0.12.3",
-    "@typescript/native-preview": "7.0.0-dev.20250705.1",
     "@ziloen/eslint-config": "0.1.64",
     "@ziloen/tailwind-config": "2.0.6",
     "babel-plugin-annotate-module-pure": "1.0.3",
     "chalk": "5.4.1",
     "chokidar": "4.0.3",
-    "core-js": "3.43.0",
-    "cross-env": "7.0.3",
-    "esbuild": "0.25.5",
+    "core-js": "3.44.0",
+    "esbuild": "0.25.6",
     "esbuild-plugin-copy": "2.1.1",
     "esbuild-style-plugin": "1.6.3",
     "eslint": "9.30.1",
