--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: lts/*
+          check-latest: true
           cache: 'npm'
 
       - name: Install dependencies
