--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@fontsource-variable/fira-code": "5.2.6",
     "@fontsource-variable/noto-sans-sc": "5.2.6",
     "@playwright/test": "1.54.2",
+    "@prettier/plugin-oxc": "0.0.4",
     "@rollup/plugin-babel": "6.0.4",
     "@tailwindcss/postcss": "4.1.11",
     "@types/babel__core": "7.20.5",
@@ -61,6 +62,7 @@
     "globby": "14.1.0",
     "playwright": "1.54.2",
     "prettier": "3.6.2",
+    "prettier-plugin-organize-imports": "4.2.0",
     "prettier-plugin-tailwindcss": "0.6.14",
     "rolldown": "1.0.0-beta.31",
     "rollup-plugin-copy": "3.5.0",
