--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:firefox": "node --env-file=.env.prod --env-file=.env.firefox scripts/rolldown.js && web-ext build -n firefox.xpi",
     "start:chromium": "web-ext run -t chromium",
     "start:firefox": "web-ext run -t firefox-desktop",
-    "typecheck": "tsc --noEmit",
+    "typecheck": "tsgo --noEmit",
     "lint": "eslint .",
     "format": "prettier --write .",
     "init:playwright": "playwright install chromium --with-deps",
@@ -50,6 +50,7 @@
     "@types/react": "19.1.11",
     "@types/react-dom": "19.1.7",
     "@types/webextension-polyfill": "0.12.3",
+    "@typescript/native-preview": "7.0.0-dev.20250825.1",
     "@ziloen/eslint-config": "0.1.70",
     "@ziloen/tailwind-config": "2.0.8",
     "babel-plugin-annotate-module-pure": "1.0.4",
