--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:firefox": "node --env-file=.env.prod --env-file=.env.firefox scripts/rolldown.js && web-ext build -n firefox.xpi",
     "start:chromium": "web-ext run -t chromium",
     "start:firefox": "web-ext run -t firefox-desktop",
-    "typecheck": "tsgo --noEmit",
+    "typecheck": "tsgo -b --noEmit",
     "lint": "eslint .",
     "format": "prettier --write .",
     "init:playwright": "playwright install chromium --with-deps",
@@ -28,7 +28,7 @@
     "typed-webext": "0.7.1",
     "uuid": "11.1.0",
     "webextension-polyfill": "0.12.0",
-    "zod": "4.1.3"
+    "zod": "4.1.4"
   },
   "devDependencies": {
     "@babel/core": "7.28.3",
@@ -47,10 +47,10 @@
     "@types/chrome": "0.1.4",
     "@types/fs-extra": "11.0.4",
     "@types/node": "24.3.0",
-    "@types/react": "19.1.11",
-    "@types/react-dom": "19.1.7",
+    "@types/react": "19.1.12",
+    "@types/react-dom": "19.1.8",
     "@types/webextension-polyfill": "0.12.3",
-    "@typescript/native-preview": "7.0.0-dev.20250825.1",
+    "@typescript/native-preview": "7.0.0-dev.20250828.1",
     "@ziloen/eslint-config": "0.1.70",
     "@ziloen/tailwind-config": "2.0.8",
     "babel-plugin-annotate-module-pure": "1.0.4",
@@ -63,7 +63,6 @@
     "esbuild-style-plugin": "1.6.3",
     "eslint": "9.34.0",
     "fs-extra": "11.3.1",
-    "globby": "14.1.0",
     "playwright": "1.55.0",
     "prettier": "3.6.2",
     "prettier-plugin-organize-imports": "4.2.0",
