--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,12 +1,14 @@
 {
   "extends": [
-    "./tsconfig.json"
+    "./tsconfig.app.json"
   ],
   "compilerOptions": {
     "rootDir": "./",
     "composite": true,
     "allowJs": true,
     "checkJs": true,
+    "skipDefaultLibCheck": true,
+    "skipLibCheck": true,
     "exactOptionalPropertyTypes": false,
     "erasableSyntaxOnly": true,
     "types": [
@@ -14,8 +16,8 @@
     ],
   },
   "include": [
-    "*.js",
-    "*.ts",
+    "./*.js",
+    "./*.ts",
     "scripts",
     "tests",
   ],
