feat: update rolldown & add chrome page reset css

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -9,6 +9,8 @@
     "checkJs": true,
     "skipDefaultLibCheck": true,
     "skipLibCheck": true,
+    "noEmit": true,
+    "allowImportingTsExtensions": true,
     "exactOptionalPropertyTypes": false,
     "erasableSyntaxOnly": true,
     "types": [
