chore: update dependencies and remove esbuild script

--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "test:playwright": "playwright test"
   },
   "dependencies": {
+    "@base-ui-components/react": "1.0.0-beta.4",
     "axios": "1.12.2",
     "clsx": "2.1.1",
-    "es-toolkit": "1.40.0",
+    "es-toolkit": "1.41.0",
     "i18next": "25.6.0",
     "motion": "12.23.24",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-i18next": "16.1.4",
+    "react-i18next": "16.2.0",
     "rxjs": "8.0.0-alpha.14",
     "serialize-error": "12.0.0",
     "typed-webext": "0.7.5",
@@ -31,10 +32,10 @@
     "zod": "4.1.12"
   },
   "devDependencies": {
-    "@babel/core": "7.28.4",
-    "@babel/preset-env": "7.28.3",
-    "@babel/preset-react": "7.27.1",
-    "@babel/preset-typescript": "7.27.1",
+    "@babel/core": "7.28.5",
+    "@babel/preset-env": "7.28.5",
+    "@babel/preset-react": "7.28.5",
+    "@babel/preset-typescript": "7.28.5",
     "@fontsource-variable/fira-code": "5.2.7",
     "@fontsource-variable/noto-sans-sc": "5.2.9",
     "@playwright/test": "1.56.1",
@@ -42,7 +43,7 @@
     "@rollup/plugin-babel": "6.1.0",
     "@svgr/core": "8.1.0",
     "@svgr/plugin-jsx": "8.1.0",
-    "@tailwindcss/postcss": "4.1.15",
+    "@tailwindcss/postcss": "4.1.16",
     "@types/babel__core": "7.20.5",
     "@types/chrome": "0.1.24",
     "@types/fs-extra": "11.0.4",
@@ -66,11 +67,12 @@
     "rolldown": "1.0.0-beta.44",
     "rollup-plugin-copy": "3.5.0",
     "sonda": "0.9.0",
-    "tailwindcss": "4.1.15",
+    "svgo": "4.0.0",
+    "tailwindcss": "4.1.16",
     "ts-lib-enhance": "1.0.21",
     "typescript": "5.9.3",
     "unplugin": "2.3.10",
-    "web-ext": "9.0.0"
+    "web-ext": "9.1.0"
   },
   "webExt": {
     "artifactsDir": "dist",
