--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:firefox": "node --env-file=.env.prod --env-file=.env.firefox scripts/rolldown.js && web-ext build -s dist/firefox -n firefox.xpi",
     "start:chromium": "web-ext run -t chromium",
     "start:firefox": "web-ext run -t firefox-desktop",
-    "typecheck": "tsc -b --noEmit",
+    "typecheck": "tsgo -b --noEmit",
     "lint": "eslint .",
     "format": "prettier --write .",
     "init:playwright": "playwright install chromium --with-deps",
@@ -19,8 +19,8 @@
     "axios": "1.13.2",
     "clsx": "2.1.1",
     "es-toolkit": "1.42.0",
-    "i18next": "25.6.3",
-    "motion": "12.23.24",
+    "i18next": "25.7.1",
+    "motion": "12.23.25",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-i18next": "16.3.5",
@@ -45,12 +45,13 @@
     "@svgr/plugin-jsx": "8.1.0",
     "@tailwindcss/postcss": "4.1.17",
     "@types/babel__core": "7.20.5",
-    "@types/chrome": "0.1.31",
+    "@types/chrome": "0.1.32",
     "@types/fs-extra": "11.0.4",
     "@types/node": "24.10.1",
     "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
     "@types/webextension-polyfill": "0.12.4",
+    "@typescript/native-preview": "7.0.0-dev.20251202.1",
     "@vitejs/plugin-react": "5.1.1",
     "@ziloen/eslint-config": "0.1.74",
     "@ziloen/tailwind-config": "2.0.13",
@@ -64,7 +65,7 @@
     "postcss-preset-env": "10.4.0",
     "prettier": "3.7.3",
     "prettier-plugin-organize-imports": "4.3.0",
-    "prettier-plugin-tailwindcss": "0.7.1",
+    "prettier-plugin-tailwindcss": "0.7.2",
     "rolldown": "1.0.0-beta.52",
     "rollup-plugin-copy": "3.5.0",
     "sonda": "0.10.1",
