chore: update deps

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "scripts": {
     "dev": "node --env-file=.env scripts/rolldown.js",
-    "dev:vite": "vite dev",
+    "dev:vite": "vite build --watch",
     "dev:firefox": "node --env-file=.env --env-file=.env.firefox scripts/rolldown.js",
     "build": "node --env-file=.env.prod scripts/rolldown.js && web-ext build -s dist/chrome -n chrome.zip",
     "build:vite": "vite build",
@@ -21,8 +21,8 @@
     "axios": "1.13.2",
     "clsx": "2.1.1",
     "es-toolkit": "1.44.0",
-    "i18next": "25.7.4",
-    "motion": "12.27.2",
+    "i18next": "25.8.0",
+    "motion": "12.29.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-i18next": "16.5.3",
@@ -31,7 +31,7 @@
     "typed-webext": "0.7.9",
     "uuid": "13.0.0",
     "webextension-polyfill": "0.12.0",
-    "zod": "4.3.5"
+    "zod": "4.3.6"
   },
   "devDependencies": {
     "@babel/core": "7.28.6",
@@ -48,36 +48,37 @@
     "@tailwindcss/postcss": "4.1.18",
     "@tailwindcss/vite": "4.1.18",
     "@types/babel__core": "7.20.5",
-    "@types/chrome": "0.1.35",
+    "@types/chrome": "0.1.36",
     "@types/fs-extra": "11.0.4",
-    "@types/node": "24.10.4",
-    "@types/react": "19.2.8",
+    "@types/node": "24.10.9",
+    "@types/react": "19.2.9",
     "@types/react-dom": "19.2.3",
     "@types/webextension-polyfill": "0.12.4",
-    "@typescript/native-preview": "7.0.0-dev.20260120.1",
+    "@typescript/native-preview": "7.0.0-dev.20260122.4",
     "@vitejs/plugin-react": "5.1.2",
     "@ziloen/eslint-config": "0.1.77",
     "@ziloen/tailwind-config": "2.0.15",
     "babel-plugin-annotate-module-pure": "1.0.4",
     "browserslist-to-esbuild": "2.1.1",
     "chokidar": "5.0.0",
-    "core-js": "3.47.0",
+    "core-js": "3.48.0",
+    "cross-env": "10.1.0",
     "eslint": "9.39.2",
     "fs-extra": "11.3.3",
     "playwright": "1.57.0",
     "postcss-preset-env": "11.1.1",
-    "prettier": "3.8.0",
+    "prettier": "3.8.1",
     "prettier-plugin-organize-imports": "4.3.0",
     "prettier-plugin-tailwindcss": "0.7.2",
-    "rolldown": "1.0.0-beta.60",
+    "rolldown": "1.0.0-rc.1",
     "rollup-plugin-copy": "3.5.0",
     "sonda": "0.10.1",
     "svgo": "4.0.0",
     "tailwindcss": "4.1.18",
     "ts-lib-enhance": "1.0.22",
     "typescript": "5.9.3",
-    "unplugin": "2.3.11",
-    "vite": "8.0.0-beta.8",
+    "unplugin": "3.0.0",
+    "vite": "8.0.0-beta.9",
     "web-ext": "9.2.0"
   },
   "webExt": {
