fix: exclude `Array.from` & `Object.entries` from  pure functions

--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
   },
   "dependencies": {
     "@base-ui/react": "1.1.0",
-    "axios": "1.13.2",
+    "axios": "1.13.3",
     "clsx": "2.1.1",
     "es-toolkit": "1.44.0",
     "i18next": "25.8.0",
-    "motion": "12.29.0",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
+    "motion": "12.29.2",
+    "react": "19.2.4",
+    "react-dom": "19.2.4",
     "react-i18next": "16.5.3",
     "rxjs": "8.0.0-alpha.14",
     "serialize-error": "13.0.1",
@@ -40,7 +40,7 @@
     "@babel/preset-typescript": "7.28.5",
     "@fontsource-variable/fira-code": "5.2.7",
     "@fontsource-variable/noto-sans-sc": "5.2.10",
-    "@playwright/test": "1.57.0",
+    "@playwright/test": "1.58.0",
     "@prettier/plugin-oxc": "0.1.3",
     "@rollup/plugin-babel": "6.1.0",
     "@svgr/core": "8.1.0",
@@ -48,13 +48,14 @@
     "@tailwindcss/postcss": "4.1.18",
     "@tailwindcss/vite": "4.1.18",
     "@types/babel__core": "7.20.5",
+    "@types/babel__preset-env": "7.10.0",
     "@types/chrome": "0.1.36",
     "@types/fs-extra": "11.0.4",
     "@types/node": "24.10.9",
     "@types/react": "19.2.9",
     "@types/react-dom": "19.2.3",
     "@types/webextension-polyfill": "0.12.4",
-    "@typescript/native-preview": "7.0.0-dev.20260122.4",
+    "@typescript/native-preview": "7.0.0-dev.20260126.1",
     "@vitejs/plugin-react": "5.1.2",
     "@ziloen/eslint-config": "0.1.77",
     "@ziloen/tailwind-config": "2.0.15",
@@ -65,8 +66,8 @@
     "cross-env": "10.1.0",
     "eslint": "9.39.2",
     "fs-extra": "11.3.3",
-    "playwright": "1.57.0",
-    "postcss-preset-env": "11.1.1",
+    "playwright": "1.58.0",
+    "postcss-preset-env": "11.1.2",
     "prettier": "3.8.1",
     "prettier-plugin-organize-imports": "4.3.0",
     "prettier-plugin-tailwindcss": "0.7.2",
